css: fix NavBar z-index error

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ a:hover.slidesjs-stop {
 #NavBar
 {
 	position: absolute;
+	z-index: 40;
 	width: 100%;
 	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 	border-radius: 10px;
@@ -170,6 +171,7 @@ a:hover.slidesjs-stop {
 #content
 {
 	position: relative;
+	z-index: 30;
 	left: 220px;
 	padding-top: 130px;
 	width: 80%;
